--- a/Lübim.mw
+++ b/Lübim.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Lübim<br />Любим
- | Lidnanznam = Coat of Arms of Lyubim (Yaroslavl oblast) (1778).png
- | Flag =
+ | Lidnanznam = Coat of arms of Lyubim (2005).gif
+ | Flag = Lubim Flag.gif
  | Lidnanznam text = Lübiman lidnanznam
- | Flag text =
+ | Flag text = Lübiman flag
  | Valdkund = Venäma
  | Eläjiden lugu = 5,125
  | Voz' = 2017
  | Pind = 11
- | Fail = Дом купца Лобанова.JPG
+ | Fail = Земская аптека.JPG
  | Pämez' = Aleksandra Kozlova<br />(sügüz'ku 2013—)
  | Telefonkod = +7-48543-xx-xxx
  | Avtokod = 76
@@ -30,6 +30,15 @@ Kaks' žilod i 15 küläd mülüdas lidnankundha Lübiman ližaks. Lidnankundan 
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 5 555 ristitud, lidnankundan — 7 243 ristitud. Kaikiš suremb lidnan ristitišt oli enamba 7 tuhad eläjid vll 1939−1989 (7 722 rist. vl 1970). Vl 2017 kaik 6 372 ristitud elihe lidnankundas (rajonan koume videndest). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid da časoun' oma väges, Bogojavlenskii-päjumalanpert' om udessündutamižes, völ koumen jumalanpertid jändused oma olmas.
 
 Lübiman agrariž-politehnine kolledž<ref>[http://pu47.edu.yar.ru/ Lübiman agrariž-politehnižen kolledžan sait (''pu47.edu.yar.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Lyubim foundation stone.jpg|Kivi lidnan alusenpanendan sijas
+Любим - Введенская церковь.jpg|Jumalanmaman Tulendan pühäpertihe jumalanpert' lidnan kaumžomal, vn 2010 nägu
+Ряды.JPG|Torguindrived vl 2015
+Земляные валы города Любима и скамейки стадиона наследие под угрозой.jpg|Maižed pudotesed lidnan keskuzpalas i lidnan stadion (2018)
+Дом купца Лобанова.JPG|Laukad (2015, ende Lobanov-torgovanan radhonuz)
+</gallery>
 
 == Homaičendad ==
 <references/>
