*Empty MediaWiki Message*

--- a/Knorkator.mw
+++ b/Knorkator.mw
@@ -1,6 +1,6 @@
 {{Muzikgrupp
  | Nimi = Knorkator
- | Logo = 
+ | Logo = Knorkator Logo.svg
  | Foto = Pressefoto knorkator 2011.jpg
  | Žanrad = [[Neue Deutsche Härte]]
  | Voded = 1994—2008, 2011—...
