--- a/Knorkator.mw
+++ b/Knorkator.mw
@@ -3,10 +3,10 @@
  | Logo = Knorkator Logo.svg
  | Foto = Pressefoto knorkator 2011.jpg
  | Žanrad = [[Neue Deutsche Härte]]
- | Voded = 1994—2008, 2011—...
+ | Voded = 1994−2008, 2011—...
  | Valdkund = Germanii
  | Lidn = Berlin
- | Kel' = [[saksan kel'|saksan]], [[anglijan kel'|anglijan]]
+ | Kel' = [[saksan kel'|saksan]],<br />[[anglijan kel'|anglijan]]
  | Leiblad = 
  | Toižed projektad = 
  | Mülükund = Stumpen,<br />Alf Ator,<br />Buzz Dee,<br />Nick Aragua,<br />Rajko Gohlke
@@ -15,45 +15,48 @@
 }}
 '''«Knorkator»''' om [[Germanii|germanijalaine]] muzikgrupp [[Berlin]]aspäi, kudamb edestab muzikad [[Neue Deutsche Härte]]-stiliš (indastrial metal), no komediženke i jumoristiženke lirikanke.
 
-Gruppan nimi om tehtud ''"knorke"''-sanaspäi, kudamb znamoičeb "lujas hüvä" vai "čoma" Berlinan slengal.
+Gruppan nimi om tehtud ''knorke''-sanaspäi, kudamb znamoičeb «lujas hüvä», «čoma» vai «mürk» Berlinan slengal.
 
 == Mülükund ==
 * Stumpen (Gero Ivers)
 * Alf Ator (Aleksander Tomas)
 * Buzz Dee (Sebastian Baur)
-* Nick Aragua (Nicolaj Gogow) (vlpäi 2003)
+* Nick Aragua (Nicolaj Gogow, vlpäi 2003)
 * Rajko Gohlke (vlpäi 2010)
 
 == Diskografii ==
 === Al'bomad ===
-* ''A'' (1995)
-* ''The Schlechtst of Knorkator'' (1998)
-* ''Hasenchartbreaker'' (1999)
-* ''Tribute to uns selbst'' (2000)
-* ''High Mud Leader'' (2002)
-* ''Ich hasse Musik'' (Limited Edition) (2003)
-* ''Zu alt'' (DVD+CD) (2005)
-* ''Das nächste Album aller Zeiten'' (Limited Edition + DVD) (2007)
-* ''Es werde nicht'' (Deluxe Edition + DVD; Vinyl Edition) (2011)
+* ''A'' (EP) (1995)
+* ''The Schlechtst of Knorkator'' (1998, Kaikiš hondomb Knorkatoraspäi)
+* ''Hasenchartbreaker'' (1999, Kodijänišiden čartan poukahtai)
+* ''Tribute to uns selbst'' (2000, Pühätase ičelein)
+* ''High Mud Leader'' (2002, Kazvol'jäine čočoi lider)
+* ''Ich hasse Musik'' (Limited Edition) (2003, Nenalöudan muzikad)
+* ''Zu alt'' (DVD+CD) (2005, Vanh ani)
+* ''Das nächste Album aller Zeiten'' (Limited Edition + DVD) (2007, Jäl'ghine al'bom kaikikš aigoikš)
+* ''Es werde nicht'' (Deluxe Edition + DVD; Vinyl Edition) (2011, Ei linne necidä)
+* ''We want Mohr'' (Deluxe Edition + DVD; Vinyl Edition) (2014, Tahtoim mavrad)
+* ''Ich bin der Boss'' (Deluxe Edition + DVD & Photobook; Green & Yellow Color Vinyl Editions) (2016, Olen pämehen)
+* ''Widerstand ist zwecklos'' (2019, Vastustuz om hödhüvine)
 
 === Singlad ===
-* ''Böse'' (1998)
-* ''Weg nach unten'' (1999)
-* ''Der Buchstabe'' (1999)
-* ''Ick wer zun Schwein'' (2000)
-* ''Ich lass mich klonen'' (2000)
-* ''Komm wieder her'' (2000)
-* ''Der ultimative Mann'' (2003)
-* ''Wir werden alle sterben'' (2006)
+* ''Böse'' (1998, Pahuz)
+* ''Weg nach unten'' (1999, Matk alahaks)
+* ''Der Buchstabe'' (1999, Kirjam)
+* ''Ick wer zun Schwein'' (2000, Kändase sigaks)
+* ''Ich lass mich klonen'' (2000, Naprin kloniruida)
+* ''Komm wieder her'' (2000, Pörtas sihe)
+* ''Der ultimative Mann'' (2003, Lopuline mužik)
+* ''Wir werden alle sterben'' (2006, Linnem kolnuded kaik)
 * ''www.einliebeslied.com'' (Anton Zylinder feat. Knorkator) (2007)
-* ''XL Baur Nummer 1'' (2010)
+* ''XL Baur Nummer 1'' (2010, XL ühthekeraduz nomer 1)
 
 === DVD ===
-* ''Zu alt'' (2005)
-* ''Das nächste Album aller Zeiten'' (2007)
-* ''Schmeckt Nach Knorkator'' (2008)
-* ''Weg nach Unten'' (2008)
-* ''Es werde Nicht'' (2011)
+* ''Zu alt'' (2005, Vanh ani)
+* ''Das nächste Album aller Zeiten'' (2007, Jäl'ghine al'bom kaikikš aigoik)
+* ''Schmeckt Nach Knorkator'' (2008, Mujab Knorkatoran kartte)
+* ''Weg nach Unten'' (2008, Matk alahaks)
+* ''Es werde Nicht'' (2011, Ei linne necidä)
 
 == Homaičendad ==
 <references/>
@@ -62,7 +65,6 @@ Gruppan nimi om tehtud ''"knorke"''-sanaspäi, kudamb znamoičeb "lujas hüvä" 
 * [http://www.knorkator.de/ Muzikgruppan oficialine sait (''knorkator.de'').] {{ref-de}}
 {{Commons|Category:Knorkator}}
 
-{{stub}}
 [[Kategorii:Saksanman muzikgruppad‎]]
 [[Kategorii:Neue Deutsche Härte]]
 [[Kategorii:Rokgruppad]]
