--- a/Miškin.mw
+++ b/Miškin.mw
@@ -33,6 +33,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 932 ristitud, ra
 
 Miškinan politehnine kolledž<ref>[http://pu34-msh.edu.yar.ru/ Miškinan politehnižen kolledžan sait (''pu34-msh.edu.yar.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом детского творчества Мышкина.JPG|Lapsiden sädamižen pert' (2008)
+Мышкин, Никольский собор.jpg|Ph. Mikulain päjumalanpert', vn 2016 nägu
+Myshkin, Yaroslavl Oblast, Russia, 152830 - panoramio.jpg|Hiren pert'kulu (2014)
+Отель - panoramio (5).jpg|Adivpert' (2009)
+Г.Мышкин, Ярославская обл., Россия. - panoramio (30).jpg|Kodirandantedištandmuzei (2009)
+</gallery>
+
 == Homaičendad ==
 <references/>
 
