--- a/Pereslavl'_Zalesskii.mw
+++ b/Pereslavl'_Zalesskii.mw
@@ -8,12 +8,13 @@
  | Eläjiden lugu = 39,105
  | Voz' = 2017
  | Pind = 23.01
- | Fail = M-danilov-sobor-5423.jpg
+ | Fail = Аэростат-махров-2021-0249.jpg
  | Pämez' = Vladimir Volkov<br />(reduku 2018—)
  | Telefonkod = +7-48535-xx-xxx
  | Avtokod = 76
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
+[[Fail:Залесский Сергиевский мост.png|thumb|left|250px|Lidnan kart (2014)]]
 '''Pereslavl' Zalesskii''' ({{lang-ru|Переславль-Залесский}}) om [[Venäma]]n lidn da lidnümbrik [[Jaroslavlin agj]]an suves. Se om agjan nellänz' lidn eläjiden lugun mödhe, mugažo om [[Pereslavlin rajon]]an administrativižeks keskuseks (ei mülü sihe).
 
 Pereslavl' Zalesskii mülüb turizman tetabha «[[Venäman Kuldaine rengaz|Kuldaine rengaz]]»-maršrutha (292 tuh. turistoid vl 2009) kahesan lidnan keskes.
@@ -35,7 +36,16 @@ Pereslavl' Zalesskii om lidnümbrikon üks'jäine eländpunkt.
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 41 925 ristitud. Kaikiš suremb lidnan ristitišt oli 43..44 tuhad eläjid vll 2000−2003 (44 900 rist. vl 2000). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kuz' jumalankodid (nell' oma väges) i ühesa jumalanpertid oma olmas lidnas, sidä kesken amuine Spasan Toižetamižen päjumalanpert' (om saudud vll 1152−1157). Dendropuišt om sätud lidnas.
 
-Pereslavl' Zalesskijan kolledž Aleksandr Nevskijan nimel nimitadud (kinofotohimii<ref>[https://college-nevskogo.edu.yar.ru/ Pereslavl' Zalesskijan kolledžan sait (''college-nevskogo.edu.yar.ru'').] {{ref-ru}}</ref>) om professionaližen opendusen aluzkundaks.
+Pereslavl' Zalesskijan kolledž Aleksandr Nevskijan nimed (kinofotohimii<ref>[https://college-nevskogo.edu.yar.ru/ Pereslavl' Zalesskijan kolledžan sait (''college-nevskogo.edu.yar.ru'').] {{ref-ru}}</ref>) om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Otel-Viktoriya-Plaza.jpg|«Viktorija-Plaza»-adivpert' (2017)
+Плещеево Озеро с Ботика.jpg|Ph. Mikita Gotalaižen mez'jumalankodi i Pleščeevo-järv, vn 2010 nägu
+Pereslavsky technopark.jpg|Pereslavlin tehnopark vl 2014
+Колледж-золотарёва-2013-0229.jpg|Pereslavlin kolledž (2013)
+Улица-маяковского-золотарёва-2013-0218.jpg|Sportkeskuz (2013), «Slavič»-tegim om tagamal
+</gallery>
 
 == Homaičendad ==
 <references/>
