--- a/Nepal.mw
+++ b/Nepal.mw
@@ -73,6 +73,17 @@ Toižed sured lidnad (enamba 100 tuh. ristituid vn 2011 rahvahanlugemižen mödh
 == Ižanduz ==
 Nepalan päeksport om [[maplodud]] (14%), [[raud]] da [[teraz]] lehthil, torvil da vanuimel (13%), [[sobad]] (läz 12%), [[lang]] villaspäi (11%), [[kour]]ad (8%); toine eksport — [[kivi|kived]] (3%), [[südäivezi|südäiveded]] (3%), [[parfümerii]] da [[muil]] (3%), [[čai]] (2%), [[vas'k]], [[alüminii]]. [[Indii]] om päpartnör torguindas (eksportan dai importan läz pol't).
 
+<br><gallery caption="Nepal">
+Kathmandu-Pratapamalla-10-vor Jagannath-Erdbebenschaden-2015-gje.jpg|Kathmandu
+Flight Kathmandu-Himalayas-44-Kathmandu-2014-gje.jpg|Kathmandu
+Bhaktapur-Nyatapola Mandir am Taumadhi Tole-12-gje.jpg|Bhaktapur
+Patan-Krishna Mandir-02-Garudasaeule-Vishveshvara-Bhimsen-gje.jpg|Patan
+Phakding-Namche-82-Tragtiere-2007-gje.jpg|Himalaya
+Machhermo to Gokyo-34-Treppenweg-2007-gje.jpg|Himalaya
+Mustang-Marpha-02-2015-gje.jpg|Mustang
+Pokhara-Tansen-30-Reisfeld-Bueffelgespann pfluegt-2013-gje.jpg|Rice
+</gallery>
+
 == Homaičendad ==
 <references />
 
