--- a/Estinma.mw
+++ b/Estinma.mw
@@ -19,6 +19,7 @@
 | Telefonkod = +372
 | Aigvö = tal'vel [[UTC]]+2,<br/>kezal [[UTC]]+3
 }}
+[[Fail:Drone video of Estonia 2021.webm|pisi|Estinma 2021]]
 '''Estinma''' ({{lang-et|Eesti}}), täuz' oficialine nimi — '''Estinman Tazovaldkund''' ({{lang-et|Eesti Vabariik}}), om [[Pohjoiževrop]]an valdkundaks, sijadase [[Baltijan meri|Baltijan meren]] randal. Sen pälidn da kaikiš suremb lidn om [[Tallidn]].
 
 Vspäi 2004 Estinma om [[Evropan Ühtištuz|EÜ:n]] da [[Pohjoižatlantižen kožundkirjutesen organizacii|PAKO:n]] ühtnii.
