--- a/Pošehonje_(lidn).mw
+++ b/Pošehonje_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 5,867
  | Voz' = 2017
  | Pind = 8.03
- | Fail = Вид с колокольни. Пошехонье.JPG
+ | Fail = Пешехонье центр.jpg
  | Pämez' = Aleksei Rumäncev<br />(keväz'ku 2011—)
  | Telefonkod = +7-48546-xx-xxx
  | Avtokod = 76
@@ -32,6 +32,15 @@ Pošehonje om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 6 084 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli läz 8 tuhad eläjid vll 1959−1996 (8 042 rist. vl 1989). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Stroican päjumalanpert' (1717) da Pühän Jumalanmaman Emäganpäivän jumalanpert' (1822) oma väges.
 
 Pošehonjen agrariž-politehnine kolledž<ref>[http://selhoztehn-posh.edu.yar.ru/ Pošehonjen agrariž-politehnižen kolledžan sait (''selhoztehn-posh.edu.yar.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Историко-краеведческий музей Пошехонья.JPG|Kodirandantedištandmuzei (2012)
+Poshekhonye - central square - shopping arcade and Trinity Church - DSCF5512.JPG|Ph. Stroican päjumalanpert' i torguindrived, vn 2012 nägu
+Poshekhonye, Yaroslavl Oblast, Russia, 152850 - panoramio - Andris Malygin (9).jpg|Sidon pert' (2011)
+Poshekhonye - Soga Hotel - DSCF5440.JPG|«Soga»-adivpert' (2012)
+Poshekhonye bus station - DSCF5417.JPG|Avtobusstancii vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
