--- a/Ribinsk.mw
+++ b/Ribinsk.mw
@@ -8,13 +8,13 @@
  | Eläjiden lugu = 190,429
  | Voz' = 2017
  | Pind = 101.42
- | Fail = Метеор Брейтово - Рыбинск - Ярославль - panoramio (44).jpg
+ | Fail = Вид на Рыбинск.jpg
  | Pämez' = Denis Dobräkov<br />(keväz'ku 2016—)
  | Telefonkod = +7-4855-xxx-xxx
  | Avtokod = 76
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
-[[Fail:Rybinsk, Russia, city and vicinities, satellite image LandSat-5, 2011-07-11, near natural colors, 30 m resolution.jpg|thumb|left|250px|Lidnan nägu Man kaimdajaspäi vn 2011 heinkus.]]
+[[Fail:Rybinsk, Russia, city and vicinities, satellite image LandSat-5, 2011-07-11, near natural colors, 30 m resolution.jpg|thumb|left|250px|Lidnan nägu Man kaimdajaspäi vn 2011 heinkus]]
 '''Ribinsk''' ({{lang-ru|Рыбинск}} [ˈrɨbʲɪnsk]) om [[Venäma]]n lidn da lidnümbrik [[Jaroslavlin agj]]an keskuzpalan lodehes. Se om agjan kahtenz' surtte lidn, [[Ribinskan rajon]]an administrativižeks keskuseks, ei mülü sihe.
 
 == Istorii ==
@@ -36,6 +36,15 @@ Viž sportkompleksad i jäpert'kulu ratas lidnas, suks'biatlontrass om Ribinskan
 
 == Transport ==
 Avtobusad, trolleibusad da taksid oma kundaližeks transportaks. Kaks' lendimportad oma lidnnano, no niišpäi ei ole kaikenaigaižid reisid, lähembaine passažirlendimport sijadase Jaroslavliš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Рыбинский театр кукол.jpg|Ribinskan tätüižteatr (2019)
+Ансамбль Спасо-Преображенского собора.jpg|Spasan Toižetamižen päjumalanpert', vn 2013 nägu
+Из окна.jpg|Volgan mašinansauvomižen tegim vl 2003 (vspäi 2006 «ODK — Gazovije turbini»-kompanii sen paloin)
+Дворец спорта «Полет».jpg|«Pol'ot»-sportpert'kulu (2019)
+Рыбинск Привокзальная площадь.jpg|Päraudtestancijan sauvuz i torg senno vl 2019
+</gallery>
 
 == Homaičendad ==
 <references/>
