--- a/Ribinsk.mw
+++ b/Ribinsk.mw
@@ -42,7 +42,7 @@ Avtobusad, trolleibusad da taksid oma kundaližeks transportaks. Kaks' lendimpor
 Рыбинский театр кукол.jpg|Ribinskan tätüižteatr (2019)
 Ансамбль Спасо-Преображенского собора.jpg|Spasan Toižetamižen päjumalanpert', vn 2013 nägu
 Из окна.jpg|Volgan mašinansauvomižen tegim vl 2003 (vspäi 2006 «ODK — Gazovije turbini»-kompanii sen paloin)
-Дворец спорта «Полет».jpg|«Pol'ot»-sportpert'kulu (2019)
+Дворец спорта «Полет».jpg|«Pol'ot»-sportpert'kulu (2019, ''Lenduz'')
 Рыбинск Привокзальная площадь.jpg|Päraudtestancijan sauvuz i torg senno vl 2019
 </gallery>
 
