--- a/Sur'_Rostov.mw
+++ b/Sur'_Rostov.mw
@@ -33,6 +33,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 31 792 rist
 
 Rostovan saraktehnologijoiden kolledž<ref>[https://rc-it.edu.yar.ru/ Rostovan saraktehnologijoiden kolledžan sait (''rc-it.edu.yar.ru'').] {{ref-ru}}</ref> i Rostovan pedagogine kolledž oma professionaližen opendusen aluzkundoikš.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Rostov, пл. Советская, 7.jpg|Lidnan administracijan sauvuz vl 2017
+Ростов.Кремль.2.jpg|Rostovan Kreml', vn 2019 nägu
+Здание мужской гимназии Кекина Ростов.jpg|Gimnazii A. Kekinan nimed vl 2018
+Hotel moskowsky trakt.jpg|«Moskovskii Trakt»-adivpert' (2009)
+Rostov TrainStation 5343.JPG|«Rostov Jaroslavskii»-raudtestancijan sauvuz vl 2015
+</gallery>
+
 == Homaičendad ==
 <references/>
 
