*Empty MediaWiki Message*

--- a/Soligalič.mw
+++ b/Soligalič.mw
@@ -35,7 +35,7 @@ Professionaližen opendusen aluzkund om Čuhloman mectegimišton tehnikuman Soli
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Soligalich Zemstvo 011 1965.jpg|Lidnan administracijan sauvuz (2020)
+Soligalich Zemstvo 011 1965.jpg|Soligaličun rajonan administracijan sauvuz (2020)
 Soligalich Churches 011 1307.jpg|Ph. Jumalanmaman sündundan päjumalanpert' (huralpäi) i Sündun Eläbzdusen mez'jumalankodi (oiktalpäi), vn 2020 nägu
 Soligalich Trade Arcades 011 1895.jpg|Torguindrividen päivnouzmaine korpus vl 2020
 Unnamed1 - panoramio (404).jpg|Kul'turkeskuz (2014)
