--- a/Bui_(lidn).mw
+++ b/Bui_(lidn).mw
@@ -29,7 +29,16 @@ Lidn om lidnümbrikon üks'jäine eländpunkt. Om ümbärtud Buin rajonan territ
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 25 763 ristitud. Kaikiš suremb lidnan ristitišt oli 32 800 eläjad vl 1992 i 27 221 eläjad vl 1959.
 
-Buin lidnansauvomižen da edheotaikundan tehnikum (edel 2012 vot — maižanduztehnikum) om professionaližen opendusen aluzkundaks.<ref>[http://btgp.ru/ Buin lidnansauvomižen da edheotaikundan tehnikuman sait (''btgp.ru'').] {{ref-ru}}</ref>
+Buin lidnansauvomižen da edheotaikundan tehnikum (edel 2012. vot — maižanduztehnikum) om professionaližen opendusen aluzkundaks.<ref>[http://btgp.ru/ Buin lidnansauvomižen da edheotaikundan tehnikuman sait (''btgp.ru'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Буй площадь.jpg|Revolücijan torg (2011)
+Церковь Благовещения Богородицы.jpg|Ph. Jumalanmaman Blagoveššenjan jumalanpert', vn 2016 nägu
+Г.Буй Сельскохозяйственный техникум - panoramio.jpg|Buin lidnansauvomižen da edheotaikundan tehnikum vl 2012 (edel 2012. vot — maižanduztehnikum)
+Город Буй, улица Октябрьской революции, дом 2.jpg|Lapsiden čomamahtoine škol (2016, ende V. Sipägin-leitnantjenaralan pert')
+Buy RailwayStation.jpg|Bui-päraudtestancijan sauvuz ph. Mikulai-čudonsädajan jumalanpertinke, vn 2009 nägu
+</gallery>
 
 == Homaičendad ==
 <references />
