--- a/Bui_(lidn).mw
+++ b/Bui_(lidn).mw
@@ -35,9 +35,10 @@ Buin lidnansauvomižen da edheotaikundan tehnikum (edel 2012. vot — maižanduz
 <gallery mode="packed" heights="125px">
 Буй площадь.jpg|Revolücijan torg (2011)
 Церковь Благовещения Богородицы.jpg|Ph. Jumalanmaman Blagoveššenjan jumalanpert', vn 2016 nägu
-Г.Буй Сельскохозяйственный техникум - panoramio.jpg|Buin lidnansauvomižen da edheotaikundan tehnikum vl 2012 (edel 2012. vot — maižanduztehnikum)
+Центр Буй.jpg|Socialiž-kul'turine «Luč»-keskuz vl 2014 (''Sädeg'')
 Город Буй, улица Октябрьской революции, дом 2.jpg|Lapsiden čomamahtoine škol (2016, ende V. Sipägin-leitnantjenaralan pert')
 Buy RailwayStation.jpg|Bui-päraudtestancijan sauvuz ph. Mikulai-čudonsädajan jumalanpertinke, vn 2009 nägu
+Г.Буй Сельскохозяйственный техникум - panoramio.jpg|Buin lidnansauvomižen da edheotaikundan tehnikum vl 2012 (edel 2012. vot — maižanduztehnikum)
 </gallery>
 
 == Homaičendad ==
