--- a/Čuhlom.mw
+++ b/Čuhlom.mw
@@ -31,6 +31,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 411 ristitud, ra
 
 Čuhloman mectegimišton tehnikum om professionaližen opendusen aluzkundaks<ref>[http://npopl23.ucoz.org/ Čuhloman mectegimišton tehnikuman sait (''npopl23.ucoz.org'').] {{ref-ru}}</ref>, sijadase Anfimovo-žilos 2 km suvhe lidnaspäi.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Chukhloma, Kostroma Oblast, Russia, 157130 - panoramio (70).jpg|Čuhloman rajonan administracijan sauvuz (2014)
+Chukhloma Church 011 0673.jpg|Ph. Jumalanmaman Emäganpäivän jumalanpert', vn 2020 nägu
+Chukhloma, Kostroma Oblast, Russia, 157130 - panoramio (105).jpg|Bankan palakund vl 2014
+Chukhloma, Kostroma Oblast, Russia, 157130 - panoramio (76).jpg|«Ekran»-kinoteatr (2014)
+Chukhloma, Kostroma Oblast, Russia, 157130 - panoramio (72).jpg|Kodirandantedištandmuzei A. Pisemskijan nimed vl 2014
+</gallery>
+
 == Homaičendad ==
 <references />
 
