/* Administrativiž-territorialine jagand */  - aktualizacii

--- a/Indii.mw
+++ b/Indii.mw
@@ -108,7 +108,7 @@ Parlamentan alakodin ühtnijoiden järgenduseližed pävaličendad oliba seičem
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Indijan štatad da territorijad]].''
 
-Indii jagase 29 štataks da 7 nevondterritorijaks.
+Indii jagase 28 štataks da 8 nevondterritorijaks (2019). Štatad alajagasoiš 732 ümbrikoks (distriktaks).
 
 == Eläjad ==
 Vn 2016 heinkus valdkundan eläjiden lugu oli 1 266 883 598 ristitud. Kaikiš suremb ristitišt om nügüd'. Indii otab kahtenden sijan mail'mas ristitišton lugun mödhe ([[Kitai]]n jäl'ghe).
