--- a/Indijan_štatad_da_territorijad.mw
+++ b/Indijan_štatad_da_territorijad.mw
@@ -1,6 +1,6 @@
-'''Indijan regionad''' — štatad da territorijad, ned oma valdkundan jagandan ezmäižeks tazopindaks. Territorijad ({{lang-en|territory}}, {{lang-hi|केन्द्रीय सरकार}} ''kendriy sarkar'') oma pened surudel. Štatad ({{lang-en|state}}, {{lang-hi|प्रांत}} ''prant'') lujas erinedas keskneze, ned alajagasoiš 642 ümbrikho ({{lang-en|district}}). Vll 1951−1956 sädihe ut administrativišt jagandad, i sen jäl'ghe štatoiden sündundan process jätksi. Saudas štatoid eläjiden kodikelen mödhe.
+'''Indijan regionad''' — štatad da territorijad, ned oma valdkundan jagandan ezmäižeks tazopindaks. Territorijad ({{lang-en|territory}}, {{lang-hi|केन्द्रीय सरकार}} ''kendriy sarkar'') oma pened surudel. Štatad ({{lang-en|state}}, {{lang-hi|प्रांत}} ''prant'') lujas erinedas keskneze, ned alajagasoiš 732 ümbrikoks ({{lang-en|district}}). Vll 1951−1956 sädihe ut administrativišt jagandad, i sen jäl'ghe štatoiden sündundan process jätksi. Saudas štatoid eläjiden kodikelen mödhe.
 
-Vspäi 2014 kaik om 36 regionad — '''29 štatad da 7 nevondterritorijad [[Indii|Indijas]]''':
+Vspäi 2019 kaik om 36 regionad — '''28 štatad da 8 nevondterritorijad [[Indii|Indijas]]'''. Kaks' regionad oma kaikiš surembad administrativižed ühtnikad mail'mas ristitišton mödhe, ned oma [[Uttar Pradeš]]- i [[Maharaštr]]-štatad.
 
 == Štatad ==
 # [[Andhra Pradeš]] (pälidn — [[Haidarabad (Indii)|Haidarabad]])
@@ -8,7 +8,6 @@ Vspäi 2014 kaik om 36 regionad — '''29 štatad da 7 nevondterritorijad [[Indi
 # [[Assam]] (pälidn — [[Dispur]])
 # [[Bihar]] (pälidn — [[Patn]])
 # [[Čhattisgarh]] (pälidn — [[Raipur]])
-# [[Džammu da Kašmir]] (pälidnad — [[Džammu]] ''(tal'vel)'', [[Srinagar]] ''(kezal)'')
 # [[Džarkhand]] (pälidn — [[Ranči]])
 # [[Goa]] (pälidn — [[Panadži]])
 # [[Gudžarat]] (pälidn — [[Gandinagar]])
@@ -36,10 +35,11 @@ Vspäi 2014 kaik om 36 regionad — '''29 štatad da 7 nevondterritorijad [[Indi
 == Nevondterritorijad ==
 # [[Andamanan da Nikobaran Sared]] (pälidn — [[Port Bler]])
 # [[Čandigarh]]-lidn (Har'jan- i Pendžab-štatoiden pälidnaks)
-# [[Dadra da Nagar Haveli]] (pälidn — [[Silvass]])
-# [[Daman da Diu]] (pälidn — [[Daman (lidn, Indii)|Daman]])
+# [[Dadra da Nagar Haveli i Daman da Diu]] (pälidn — [[Daman (lidn, Indii)|Daman]])
 # [[Deli]]-lidn (+ [[Uz' Deli]]) — ''Nacionaline pälidnan ümbrik''
-# [[Lakšadvip]] (pälidn — [[Karavatti]])
+# [[Džammu da Kašmir]] (pälidnad — [[Džammu]] ''(tal'vel)'', [[Srinagar]] ''(kezal)'')
+# [[Ladakh]] (pälidn — [[Leh (Indii)|Leh]])
+# [[Lakšadvip]] (pälidn — [[Kavaratti]])
 # [[Pudučerri]] (pälidn — [[Pudučerri (lidn)|Pudučerri-lidn]])
 
 == Tobmuz ==
