--- a/Galič_(Kostroman_agj).mw
+++ b/Galič_(Kostroman_agj).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 16,922
  | Voz' = 2017
  | Pind = 16.5
- | Fail = Square in Galich 2.jpg
+ | Fail = Вид на Галич (Костромская область) с Фестивальной улицы 20200815 01.jpg
  | Pämez' = Aleksei Karamišev<br />(sügüz'ku 2018—)
  | Telefonkod = +7-49437-xx-xxx
  | Avtokod = 44
@@ -30,6 +30,16 @@ Galič om lidnümbrikon üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 346 ristitud. Kaikiš suremb lidnan ristitišt oli 20..21 tuhad eläjid vll 1979−2000 (21 652 rist. vl 1989).
 
 Galičun agrariž-tehnologine<ref>[http://www.eduportal44.ru/npo/gat/default.aspx Galičun agrariž-tehnologižen kolledžan lehtpoled ''eduportal44.ru''-saital.] {{ref-ru}}</ref> i pedagogine kolledžad oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Galich RevolutsiiSquare 7d2 011 3287.jpg|Lämoipalonvastaine palakund vl 2020
+Galich Paisievo-GalichskyMonastery 0850c.jpg|Paisijevo-Galičun naižjumalankodi, vn 2020 nägu
+Galich TwoChurches 0809.jpg|Ph. Jumalanmaman Tulendan päjumalanpert' (huralpäi) i ph. Vasilein Suren jumalanpert' (oiktalpäi), vn 2020 nägu
+Galich TradeArcades 101 0837.jpg|Adivpert'tanaz — Torguindrived (2020)
+Galich Ledneva2d1 011 3276.jpg|Sädamižen pert' i lapsidenkirjišt (2020)
+Galich Railway Station main.jpg|Galič-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Homaičendad ==
 <references />
