--- a/Kologriv.mw
+++ b/Kologriv.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 3,032
  | Voz' = 2017
  | Pind = 6
- | Fail = Kologrivskij kraevedcheskij muzej 12.jpg
+ | Fail = Kologriv Center 010 9420b.jpg
  | Pämez' = Jevgenii Sizov<br />(kül'mku 2015—)
  | Telefonkod = +7-49443-xx-xxx
  | Avtokod = 44
@@ -30,6 +30,15 @@ Lidn sijadase rajonan suves, [[Unž (Volgan ližajogi)|Unž-jogen]] hural randal
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 3 314 ristitud, lidnankundan — 3 940 ristitud. Vl 2017 kaik 3 553 ristitud elihe lidnankundas. Kaikiš suremb lidnan ristitišt oli 4 568 eläjad vl 1959 i 4 599 eläjad vl 1970, lidnankundan (andmused vspäi 2008) — 4 162 eläjad vl 2008.
 
 Keskškol i čomamahtoiden škol oma opendusen üks'jäižed aluzkundad. Ende pedagogine i medicinine školad radoiba, zootehnikum oli olmas ezilidnas jogen vastrandal (vhesai 1986).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Кологрив, набережная Киченки, 13 (1).jpg|Kologrivan rajonan administracijan pert' vl 2020
+Kologriv Cathedral 010 9455.jpg|Ph. Jumalanmaman Emäganpäivän päjumalanpert', vn 2020 nägu
+Кострома, Верхняя улица, 16 (1).jpg|Lidnan keskškol vl 2020 (ende naižgimnazii)
+Kologrivskij kraevedcheskij muzej 12.jpg|Kologrivan kodirandantedištandmuzei G. Ladiženskijan nimed (2013)
+Unzha near Kologriv.jpg|Avtotesild Unžas päliči vl 2006
+</gallery>
 
 == Homaičendad ==
 <references />
