quite another «ku»

--- a/Kudmaine.mw
+++ b/Kudmaine.mw
@@ -1,8 +1,8 @@
 {{1000}}{{A10000}}
 [[Fail:Phase of the moon NO.14.jpg|thumb|right|250px|Kudmaine]]
-'''Kudmaine''' ({{lang-la|Luna}}) om [[Ma]]n üks'jäine londuseline [[kaimdai]]. Sen astronomine znam om [[Fail:Moon decrescent symbol (fixed width).svg|16px|☾]].
+'''Kudmaine''' ({{lang-la|Luna}}) om [[Ma]]n üks'jäine londuseline [[kaimdai]]. Sen astronomine znam om [[Fail:Moon decrescent symbol (bold).svg|16px|☾]].
 
-Lähembaine [[Päiväine|Päiväižennoks]] planetan kaimdai, sikš miše ei ole kaimdajad [[Merkurii (planet)|Merkurijal]] i [[Vener (planet)|Veneral]]. Kahtenz' objekt [[taivaz|taivhas]] Päiväižen jäl'ghe loštabusen (kudmavauktuz) i nägujan suruden mödhe, sen form om [[ku]]. [[Päiväižen sistem]]an videnz' surtte planetan kaimdai. Keskmäine distancii Man i Kudmaižen keskusiš — 384 467 km (läz 30 Man diametrad), ned sätas kaks'planetanvuittušt sistemad. Üks'jäine astronomine objekt, kus [[ristit]] mäni.
+Lähembaine [[Päiväine|Päiväižennoks]] planetan kaimdai, sikš miše ei ole kaimdajad [[Merkurii (planet)|Merkurijal]] i [[Vener (planet)|Veneral]]. Kahtenz' objekt [[taivaz|taivhas]] Päiväižen jäl'ghe loštabusen (kudmavauktuz) i nägujan suruden mödhe, sen form om ku. [[Päiväižen sistem]]an videnz' surtte planetan kaimdai. Keskmäine distancii Man i Kudmaižen keskusiš — 384 467 km (läz 30 Man diametrad), ned sätas kaks'planetanvuittušt sistemad. Üks'jäine astronomine objekt, kus [[ristit]] mäni.
 
 == Päandmused ==
 Minimaline keskust Man i Kudmaižen keskes oleskeleb 363 104 km, kaikiš pidemb — 405 696 km. Kudmaižen keskmäine diametr om 3474,2 km. Pind — 37,93 mln km², vai 0,074 Man pindan rindataden. Ekvatoran piduz — 10 917 km. Mass — 7,3477 · 10<sup>22</sup> kg (Man massan 1/81). Keskmäine ninevuz — 3,3464 g/sm³. Joudjaližen lanktendan pigustuz — 1,62 m/s² vai 0,165g. Lämuz ekvatoral: minimaline −173 C° (100 K), keskmäine −53 C° (220 K), kaikiš suremb — +117 C° (390 K). Läz ei ole atmosferad, sen sijas om [[vezinik]]an, [[gelii|gelijan]], [[neon]]an i [[argon]]an jäl'gid.
