--- a/Volgorečensk.mw
+++ b/Volgorečensk.mw
@@ -31,6 +31,13 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 104 ristitud. K
 
 Volgorečenskan tegimištoline tehnikum<ref>[http://vpt-44.ru/ Volgorečenskan tegimištoližen tehnikuman sait (''vpt-44.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Собор преподобного Тихона Луховского.jpg|Ph. Tihon Luhalaižen jumalanpert' (om saudud vll 1996−2006), vn 2019 nägu
+Enceladus i Kostromskaya GRES.jpg|Kostroman GRES tagamal vl 2017
+Р.Волга. Волгореченск. Островок у электростанции. - panoramio.jpg|Sar' Volgas läz elektrostancijad
+</gallery>
+
 == Homaičendad ==
 <references />
 
