--- a/Šarj.mw
+++ b/Šarj.mw
@@ -8,8 +8,8 @@
  | Eläjiden lugu = 23,912
  | Voz' = 2017
  | Pind = 25.3
- | Fail = Sharya Vokzal.jpg
- | Pämez' = Eduard Neganov<br />(2011—2012;<br />reduku 2017—)
+ | Fail = Железнодорожный вокзал станции Шарья в 2020 году (вид с привокзальной площади).jpg
+ | Pämez' = Eduard Neganov<br />(2011−2012;<br />reduku 2017—)
  | Telefonkod = +7-49449-xx-xxx
  | Avtokod = 44
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
@@ -33,6 +33,14 @@ Professionaližen opendusen aluzkundad: politehnine i agrarine tehnikumad, pedag
 
 == Transport ==
 Pened avtobusad da maršruttaksid oma kundaližeks transportaks lidnas da sen ümbrištos. «[[Kotlas]] — [[Nikol'sk]] — [[Uren']] ([[Alalidnan agj]])»-avtote ümbärdab lidnad päivnouzmaspäi, «[[Kostrom]] — [[Kirov]]»-avtote ümbärdab lidnad suvespäi.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Шарья, храм Святителя Николая.jpg|Ph. Mikulain jumalanpert', vn 2007 nägu
+Sharya depot.jpg|Vedimdepo vl 2006
+Железнодорожный вокзал станции Шарья в 2020 году (вид с платформы).jpg|Šarj-päraudtestancijan sauvuz vl 2020
+Bridge venluga river sharya.jpg|Sild Vetlugas päliči vl 2006
+</gallery>
 
 == Homaičendad ==
 <references />
