--- a/Petuhov_Anatolii.mw
+++ b/Petuhov_Anatolii.mw
@@ -10,7 +10,7 @@ Vozil 1990−1993 kirjutai da lehtezmez' oli Venäman Ülembaižen Nevondkundan 
 * «Mecamez'» (1966, {{lang-ru|Лешак}})
 * «Sinižes mecantaguižes» (''В синем залесье'')
 * «Trelog Lübimovkas» (''Тревога в Любимовке'')
-* «Sit' — peitol'ne jogi» (om pästtud vl 1971, ''Сить — таинственная река'')
+* «Sit' — sarnaline jogi»<ref>''A. Petuhov''. Sit' — sarnaline jogi // Verez tullei 2020. — Lpp. 14−44. {{ref-vep}}</ref> (om pästtud venäkelel vl 1971, ''Сить — таинственная река'')
 * «Rodun jur'» (sanutesiden kogoduz, om pästtud vl 1972, ''Корень рода'')
 * «Anda käbälod, kondi-sebranik» (1976, ''Дай лапу, друг медведь'')
 * «Tatata» (1985, ''Без отца'')
