--- a/Nereht_(lidn).mw
+++ b/Nereht_(lidn).mw
@@ -31,6 +31,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 22 828 rist
 
 Professionaližen opendusen aluzkund om Nerehtan politehnine tehnikum.<ref>[http://www.eduportal44.ru/npo/pl27/default.aspx Nerehtan politehnižen tehnikuman lehtpoled ''eduportal44.ru''-saital.] {{ref-ru}}</ref>
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Nerekhta-museum.jpg|Kodirandantedištandmuzei (2009, ende zell'lauk)
+Здание Торговых рядов. Нерехта.jpg|Torguindrived i Sündun Nägundan jumalanpert', vn 2016 nägu
+Sberbank Nerekhta Oktyabrskaya 5.jpg|Sberbankan palakund vl 2013
+Нерехта стадион Старт - panoramio.jpg|«Start»-stadion (2012)
+Nerekhta-station02.jpg|Nereht-päraudtestancijan sauvuz vl 2009
+</gallery>
+
 == Homaičendad ==
 <references />
 
