--- a/Nei_(lidn).mw
+++ b/Nei_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 8,964
  | Voz' = 2017
  | Pind = 16.11
- | Fail = 
+ | Fail = Neya DK 010 9811.jpg
  | Pämez' = Sergei Ivanov<br />(sügüz'ku 2016—)
  | Telefonkod = +7-49444-xx-xxx
  | Avtokod = 44
@@ -31,11 +31,20 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 9 827 ristitud, ra
 
 Nejan politehnine tehnikum om professionaližen opendusen aluzkundaks.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Neya WaterTower 010 9918.jpg|Vezičuhunduz (2020)
+Neya Museum 010 9861.jpg|Kodirandantedištandmuzei (2020)
+Neya 010 9792.jpg|Kundaline kül'bet' vl 2020
+Neya DK 010 9820.jpg|Kul'turkeskuz (2020)
+</gallery>
+
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
 * [http://www.neya.info/index.php/mainmenu-36/mainmenu-37#13 Lidnankundan lehtpoled Nei-lidnan da Nejan rajonan oficialižel ''neya.info''-saital.] {{ref-ru}}
+{{Commons|Category:Neya}}
 
 {{Kostroman agjan lidnad}}
 
