--- a/Manturovo.mw
+++ b/Manturovo.mw
@@ -33,6 +33,14 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 479 ristitud. K
 
 Manturovon politehnine tehnikum om professionaližen opendusen aluzkundaks.<ref>[http://техникум-мантурово.рф/ Tehnikuman oficialine sait (''техникум-мантурово.рф'').] {{ref-ru}}</ref>
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Водонапорная башня на ст. Мантурово.jpg|Vezičuhunduz raudtestancijanno (2020)
+Ncmantyrovo250415.jpg|Ph. Mikulai-čudonsädajan jumalanpert' (1836), vn 2015 nägu
+Здание клуба (1).jpg|Kul'turkeskuz (2020)
+Станция Мантурово - panoramio.jpg|Manturovo-päraudtestancijan sauvuz vl 2014
+</gallery>
+
 == Homaičendad ==
 <references />
 
