--- a/Makarjev.mw
+++ b/Makarjev.mw
@@ -8,12 +8,13 @@
  | Eläjiden lugu = 6,632
  | Voz' = 2017
  | Pind = 10
- | Fail = Makariev.jpg
- | Pämez' = Marina Šahova<br />(kezaku 2019—)<br />''(velgusentäutai)''
+ | Fail = Макарьев, площадь Революции, 45.jpg
+ | Pämez' = Maksim Sokolov<br />(kezaku 2021—)
  | Telefonkod = +7-49445-xx-xxx
  | Avtokod = 44
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
 }}
+[[Fail:Makariev city quarters 2021.svg|thumb|left|250px|Lidnan kart (2021)]]
 '''Makarjev''' ({{lang-ru|Мака́рьев}}) om [[Venäma]]n lidn da lidnankund [[Kostroman agj]]an suves. Se om [[Makarjevan rajon]]an administrativine keskuz.
 
 == Istorii ==
@@ -32,6 +33,15 @@ Komsomolk-žilo (ven. ''посёлок Комсомолка'', 142 rist. vl 2014
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 7 274 ristitud, lidnankundan — 7 493 ristitud. Vl 2017 kaik 6 805 ristitud elihe lidnankundas. Kaikiš suremb lidnan ristitišt oli 10 076 eläjad vl 1959, lidnankundan (andmused vspäi 2008) — 7 657 eläjad vl 2008.
 
 Professionaližen opendusen aluzkund om Makarjevan profškol — Kostroman avtoteiden kolledžan filial.<ref>[http://www.eduportal44.ru/npo/kadk/doclib60/forms/allitems.aspx Filialan lehtpoled ''eduportal44.ru''-saital.] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Макарьевский краеведческий музей.jpg|Kodirandantedištandmuzei (2018)
+Makaryev-UnzhenskyConvent 110 0364.jpg|Makarjevo-Unžan mez'jumalankodi (alusenpanend 1439, edel 2016. vot — naižjumalankodi), vn 2020 nägu
+Торговые ряды, Макарьев.jpg|Torguindrived vl 2019
+Makaryev College 010 8720.jpg|Makarjevan profškol (2020)
+Ленина парк макарьев.jpg|Puišt Leninan nimed lidnan keskuzpalas vl 2019
+</gallery>
 
 == Homaičendad ==
 <references />
