--- a/Omutninsk.mw
+++ b/Omutninsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 22,009
  | Voz' = 2018
  | Pind = 40
- | Fail = Omutninsk-zavod.JPG
+ | Fail = Omutninsk.jpg
  | Pämez' = Igor' Šatalov<br />(sügüz'ku 2017—)
  | Telefonkod = +7-83352-xx-xxx
  | Avtokod = 43
@@ -30,6 +30,15 @@ Koume žilod i kaks' küläd mülüdas lidnankundha Omutninskan ližaks, sidä k
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 615 ristitud, lidnankundan — 24 185 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 28..29 tuhad eläjid vll 1970−2001 (29 600 eläjad vl 1992). Kaik 22 798 ristitud elihe lidnankundas vl 2017.
 
 Professionaližen opendusen aluzkundad oma Omutninskan politehnine tehnikum<ref>[http://www.goupu20.kirov.ru/ Omutninskan politehnižen tehnikuman sait (''goupu20.kirov.ru'').] {{ref-ru}}</ref>, Omutninskan pedagogikan, ekonomikan da oiktusen kolledž, mugažo Kirovan medicinižen kolledžan Omutninskan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Покровская церковь в Омутнинске.JPG|Jumalanmaman Katken jumalanpert' (vanhuskolaižed), vn 2014 nägu
+Omutninsk-Troitsa.JPG|Ph. Stroican päjumalanpert' (ortodoksine hristanuskond), vn 2012 nägu
+Omutninsk-zavod.JPG|Raudan metallurgijan tegimen kontor i lidnan keskuzline torg vl 2012
+Omutninsk-prud.JPG|Tegimen uiton randird
+Stalnaya-station.JPG|Stal'nai-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references />
