--- a/Jaransk.mw
+++ b/Jaransk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 15,752
  | Voz' = 2019
  | Pind = 25
- | Fail = Торговые ряды купцов Носовых (день).png
+ | Fail = 
  | Pämez' = Nikolai Zikov<br />(sulaku 2018—)
  | Telefonkod = +7-83367-xx-xxx
  | Avtokod = 43
@@ -30,6 +30,15 @@ Visokovo-žilo (158 rist. vl 2010) i 17 küläd mülüdas lidnankundha Jaranskan
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 17 523 ristitud, lidnankundan — 18 041 ristitud, rajonan kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 20..21 tuhad eläjid vll 1989−2001 (21 700 eläjad vll 2000−2001). Vl 2017 kaik 16 756 ristitud elihe lidnankundas.
 
 Professionaližen opendusen aluzkund om Jaranskan tehnologine tehnikum (alusenpanend vl 1873).<ref>[http://yagtt.com/ Jaranskan tehnologižen tehnikuman sait (''yagtt.com'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Земская управа. Яранск.jpg|Jaranskan rajonan administracijan sauvuz (2021)
+Троицкий собор (Яранск).jpg|Ph. Stroican päjumalanpert', vn 2011 nägu
+Успенский кафедральный собор г. Яранска.jpg|Emäganpäivän kafedraline päjumalanpert', vn 2013 nägu
+Торговые ряды купцов Носовых (день).png|Nosovad-torgovanoiden torguindrived
+Yaransk central library.jpg|Jaranskan rajonan keskuzkirjišt (2019, ende A. Kalinin-torgovanan pert')
+</gallery>
 
 == Homaičendad ==
 <references />
