--- a/Jaransk.mw
+++ b/Jaransk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 15,752
  | Voz' = 2019
  | Pind = 25
- | Fail = 
+ | Fail = Торговый центр.png
  | Pämez' = Nikolai Zikov<br />(sulaku 2018—)
  | Telefonkod = +7-83367-xx-xxx
  | Avtokod = 43
