--- a/Vätkan_Poläni.mw
+++ b/Vätkan_Poläni.mw
@@ -33,6 +33,15 @@ Rahvahad (2002): [[venälaižed]] — 70,2%, [[totarlaižed]] — 18,2%, [[udmur
 
 Professionaližen opendusen aluzkundad oma Vätkan Polänin mehanine tehnikum<ref>[http://www.vpmt.ru/ Vätkan Polänin mehanižen tehnikuman sait (''vpmt.ru'').] {{ref-ru}}</ref> i Vätkan Polänin gumanitarine kolledž.<ref>[http://www.gumkoll.ru/ Vätkan Polänin gumanitarižen kolledžan sait (''gumkoll.ru'').] {{ref-ru}}</ref>
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация г.Вятские Поляны.JPG|Lidnan administracijan sauvuz (2006)
+Vyatskiye Polyany 05 2021 176.jpg|Ph. Mikulain päjumalanpert', vn 2021 nägu
+VjatskiePolyany zavod molot.jpg|Mašinansauvomižen «Molot»-tegim vl 2017 (''Pall' '')
+ДК Победа.JPG|«Pobeda»-kul'turkeskuz (2007, ''Vägestuz'')
+Нократ Аланы вокзалы.jpg|Vätkan Poläni-päraudtestancijan sauvuz vl 2013
+</gallery>
+
 == Homaičendad ==
 <references />
 
