--- a/Slovenijan_kel'.mw
+++ b/Slovenijan_kel'.mw
@@ -5,6 +5,32 @@ Kel' om [[Slovenii|Slovenijan]] valdkundkeleks. Kirjkel' om [[latinan kirjamišt
 
 Pagižijoiden lugu — 2,5 millionad ristituid (2010), Slovenijas päpaloin. Kelen reguliruindorganzacii om Slovenijan tedoiden da čomamahtoiden Akademii (''Slovenska akademija znanosti in umetnosti, SAZU'', [[Lüblän]]).
 
+Paginkel' jagase 32..48 paginaks standartata, ühtenzoittas niid seičemehe..ühesha gruppha. Kirjankelen sädand tuli lophu 1850-nzil vozil.
+
+== Lugusanad ==
+* '''èn''' — üks' 
+* '''dvá''' — kaks' 
+* '''tríje''' — koume 
+* '''štírje''' — nell' 
+* '''pét''' — viž 
+* '''šést''' — kuz' 
+* '''sédem''' — seičeme 
+* '''ósem''' — kahesa 
+* '''devét''' — ühesa 
+* '''desét''' — kümne
+* '''dvájset''' — kaks'kümne
+* '''trídeset''' — koumekümne
+* '''stó''' — sada
+* '''tísoč''' — tuha
+
+== Frazad ==
+* Zdravo! — Tervhen!
+* Kako ti je ime? — Kut sindai kuctas?
+* Od kod si? — Kugalaine oled?
+* Kje živiš? — Kus sinä eläd?
+* Adijo! / Se vidimo! — Nägemižhesai!
+* Hvala! — Kitän.
+
 == Homaičendad ==
 <references/>
 
