--- a/Uržum.mw
+++ b/Uržum.mw
@@ -31,6 +31,15 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 213 rist
 
 Professionaližen opendusen aluzkundad oma Uržuman agrariž-tehnine tehnikum<ref>[http://agrotex-urzhum.ru/ Uržuman agrariž-tehnižen tehnikuman sait (''agrotex-urzhum.ru'').] {{ref-ru}}</ref> i Kirovan medicinižen kolledžan Uržuman filial.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дом, в котором в 1886 г. родился и жил до 1894 г. Киров С.М.jpg|Nevondkundaližen [[Sergei Kirov]]-valdkundmehen muzei (2019)
+Троицкий собор с интерьером - издалека (ул.Советская, 34, Уржум, Кировская область).jpg|Pühän Stroican päjumalanpert', vn 2015 nägu
+Торговые лавки в Уржуме.jpg|Istorižed da nügüdläižed laukad vl 2019
+Гимназия фото.jpg|Lidnan gimnazii (2020)
+Уржум знак.JPG|Znam lidnan röunal (2012, Malmižan polespäi)
+</gallery>
+
 == Homaičendad ==
 <references />
 
