--- a/Zujevk.mw
+++ b/Zujevk.mw
@@ -9,7 +9,7 @@
  | Voz' = 2018
  | Pind = 40.31
  | Fail = Водонапорная башня в локомотивном депо ст. Зуевка.jpg
- | Pämez' = Andrei Rodigin<br />(sügüz'ku 2017—.<br />Андрей Родыгин)
+ | Pämez' = Andrei Rodigin<br />(sügüz'ku 2017—.<br />''Андрей Родыгин'')
  | Telefonkod = +7-83337-xx-xxx
  | Avtokod = 43
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
@@ -30,6 +30,14 @@ Zujevk om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 198 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 19 903 eläjad vl 1959.
 
 Professionaližen opendusen aluzkund om Zujevkan mehaniž-tehnologine tehnikum.<ref>[http://zgmtt.ucoz.org/ Zujevkan mehaniž-tehnologižen tehnikuman sait (''zgmtt.ucoz.org'').] {{ref-ru}}</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Зуевка, водонапорная башня.jpg|Vezičuhunduz (2021)
+Зуевка, школа, где учился герой Советского Союза А.К. Опалев.jpg|Enzne škol (2021)
+Зуевка, эвакогоспиталь.jpg|Keskškol (2021)
+Зуевка, станция1.jpg|Zujevk-päraudtestancii vl 2021
+</gallery>
 
 == Homaičendad ==
 <references />
