--- a/Kirs.mw
+++ b/Kirs.mw
@@ -31,6 +31,14 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 420 rist
 
 Professionaližen opendusen aluzkund om Vätkan torguindtegimištoline tehnikum, baziruiše Kirsas.<ref>[http://вгтпт.рф/ Vätkan torguindtegimištoližen tehnikuman sait (''вгтпт.рф'').] {{ref-ru}}</ref>
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник Ленину у здания районной администрации. Общий вид.jpg|Üläkaman rajonan administracijan sauvuz (2018)
+Покровская церковь и школа в городе Кирс.jpg|Keskškol i Jumalanmaman Katken jumalanpert', vn 2013 nägu
+Территория завода Кирскабель с корпусом А и заводоуправлением.JPG|«Kirskabel'»-tegimen kontor i A-korpus vl 2011
+Kirs station 2009.jpg|Kirs-raudtestancii vl 2009
+</gallery>
+
 == Homaičendad ==
 <references />
 
