--- a/Ekkleziastan_kirj.mw
+++ b/Ekkleziastan_kirj.mw
@@ -1,6 +1,7 @@
+[[Fail:Colorized King Solomon in Old Age.png|thumb|right|250px|''Solomon-car' rauhaks meheks'', Güstav Dore-grafikanpirdajan gravüran (1866) mujutadud versii]]
 '''Ekkleziastan kirj''' ({{lang-he|קֹהֶלֶת}} ''Kohelet'', {{lang-el|Ἐκκλησιαστὴς}} ''Ekklesiastes'', {{lang-la|Ecclesiasticus}}, {{lang-ru|Книга Екклесиаста}}) om evrejan [[Tanah]]-biblijan Ktuvim-jagusen 7. kirj i [[hristanuskond]]an 21. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
-Kirj om sätud faktižikš 5.-3. voz'sadal EME, original om evrejan kelel. Om 14 jagust. Solomon-car' (10. voz'sada EME) om vaiše nominaline kirjan tegii.
+Kirj om sätud faktižikš 5.-3. voz'sadal EME, original om evrejan kelel. Kaik om 14 jagust. [[Solomon]]-car' (10. voz'sada EME) om vaiše nominaline kirjan tegii.
 
 Süžetad i kundan kuvid kirjas ei ole, se om järgeline Päivnouzmmal melevuden literatur.
 
