--- a/1._Kunigahiden_kirj.mw
+++ b/1._Kunigahiden_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Samuel e david.jpg|thumb|right|250px|''Samuil i David''. Fresk [[Dura Evropos]]-muštnikan sinagogaspäi, [[Sirii]], 3. voz'sada meiden erad]]
 '''1. Kunigahiden kirj''', vai '''1. Samuilan kirj''' ({{lang-he|שְׁמוּאֵל א׳}} ''Šmuel' I'', {{lang-el|Βασιλειων Α'}} ''Basileion A'', {{lang-la|I Samuelis}}, {{lang-ru|1-я Книга Царств}}), om evrejan [[Tanah]]-biblijan kirj i [[hristanuskond]]an 9. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Original om sätud evrejan kelel. Kirj kogoneb 31 jagusespäi.
